--- a/css/style.css
+++ b/css/style.css
@@ -20,12 +20,15 @@ nav {
     width: 100%;
 }
 
+.menu_bar{
+    display:none;
+}
 ul {
     display: flex;
     justify-content: space-evenly;
     list-style: none;
     margin: 0;
-    padding: 5px 0;
+    padding: 7px 0;
 }
 
 ul li a {
